--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                                     <div class="form-group"><input class="form-control is-invalid" type="email" name="email"><small class="form-text text-danger">Please enter a valid email address.</small></div>
                                     <hr>
                                     <p>Message</p>
-                                    <div class="form-group"><textarea class="form-control" name="message" rows="14"></textarea></div>
+                                    <div class="form-group"><textarea class="form-control" type="text" name="message" rows="14"></textarea></div>
                                     <hr>
                                     <div class="form-group"><button class="btn btn-primary" type="submit"> Send </button></div>
                                 </form>
