--- a/about.html
+++ b/about.html
@@ -56,6 +56,25 @@
                                     <hr>
                                     <div class="form-group"><button class="btn btn-primary" type="submit"> Send </button></div>
                                 </form>
+                                
+<form method="post" action="send_mail.php">
+    <p>
+    <label>First Name
+    <input type="text" name="first_name" required>
+    </label> 
+    </p>
+    <p>
+    <label>Email 
+    <input type="email" name="email_address">
+    </label>
+    </p>
+    <p>
+    <label>Comments
+    <textarea name="comments" maxlength="500"></textarea>
+    </label>
+    </p>
+    <p><button>Submit the form</button></p>
+    </form>
                             </div>
                         </div>
                     </div>
