reduced directories, working on developerhtml

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
             <title>Isa Biramontes</title>
-            <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+            <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-            <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
-            <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-            <link rel="stylesheet" href="assets/css/custom.css">
+            <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
+            <link rel="stylesheet" href="css/Contact-Form-Clean.css">
+            <link rel="stylesheet" href="css/Footer-Basic.css">
+            <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
         <body id="page-top">
             <div class="bar"> </div>
-            <header id="mainHeader" class="d-flex masthead" data-aos="zoom-out" data-aos-duration="1000" style="background: url(&quot;assets/img/cover.png&quot;), #000000">
+            <header id="mainHeader" class="d-flex masthead" data-aos="zoom-out" data-aos-duration="1000" style="background: url(&quot;img/cover.png&quot;), #000000">
                 <div id="mainText" class="container my-auto text-center">
                     <h1 class="text-center masthead-subheading mb-0" style="font-size: 80px;color: #d8ff33;text-align: center;"><em style="text-transform: uppercase;"">ISA BIRAMONTES</em></h2>
                     <h3 class="text-center masthead-subheading mb-0" style="color: #d8ff33;text-align: center;"><strong><em>Developer, designer, artist.</em></strong><br></h3>
@@ -28,52 +28,52 @@
                     <div class="row">
                         <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
                             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="assets/img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
                                 <div class="captions">Fabricademy </div>
                                 <!-- <div id="testDiv"> swag </div> -->
                             </div>
                             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="assets/img/discovery-bg%20(1).jpg">
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
                                 <div class="captions">Fabricademy </div>
                             </div>
                             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="assets/img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="assets/img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;padding-top: 10px;padding-bottom: 10px;" src="assets/img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="assets/img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="assets/img/discovery-bg%20(1).jpg">
-                                <div class="captions">Fabricademy </div>
-                            </div>
-                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="assets/img/discovery-bg%20(1).jpg">
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
                                 <div class="captions">Fabricademy </div>
                             </div>
                         </div>
                         <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
                             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="assets/img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
                                 <div class="captions">Fabricademy </div>
                             </div>
                             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img style="height: auto;width: auto;" src="assets/img/discovery-bg%20(1).jpg">
+                                <img style="height: auto;width: auto;padding-top: 10px;padding-bottom: 10px;" src="img/discovery-bg%20(1).jpg">
                                 <div class="captions">Fabricademy </div>
                             </div>
                             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
-                                <img src="assets/img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 offset-lg-0" style="text-align: center; width: 25%;height: auto;">
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg">
+                                <div class="captions">Fabricademy </div>
+                            </div>
+                            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
+                                <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
                                 <div class="captions">Fabricademy </div>
                             </div>
                         </div>
@@ -81,12 +81,12 @@
                 </div>
             </div>
             <div class="footer"></div>
-            <script src="assets/js/jquery.min.js"></script>
-            <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-            <script src="assets/js/bs-init.js"></script>
+            <script src="js/jquery.min.js"></script>
+            <script src="bootstrap/js/bootstrap.min.js"></script>
+            <script src="js/bs-init.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-            <script src="assets/js/stylish-portfolio.js"></script>
-            <script src="assets/js/custom.js"></script>
+            <script src="js/stylish-portfolio.js"></script>
+            <script src="js/custom.js"></script>
         </body>
     </html>
