--- a/thank_you.html
+++ b/thank_you.html
@@ -4,14 +4,14 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
             <title>Thank You</title>
-            <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+            <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
             <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-            <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
-            <link rel="stylesheet" href="assets/css/Footer-Basic.css">
-            <link rel="stylesheet" href="assets/css/custom.css">
+            <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
+            <link rel="stylesheet" href="css/Contact-Form-Clean.css">
+            <link rel="stylesheet" href="css/Footer-Basic.css">
+            <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
         <body id="page-top">
@@ -21,12 +21,12 @@
             <p><a href="about.html"> Return to about me </a>.</p>
             <p><a href="index.html"> Return to home </a>.</p>
             <div class="footer"></div>
-            <script src="assets/js/jquery.min.js"></script>
-            <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-            <script src="assets/js/bs-init.js"></script>
+            <script src="js/jquery.min.js"></script>
+            <script src="bootstrap/js/bootstrap.min.js"></script>
+            <script src="js/bs-init.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-            <script src="assets/js/stylish-portfolio.js"></script>
-            <script src="assets/js/custom.js"></script>
+            <script src="js/stylish-portfolio.js"></script>
+            <script src="js/custom.js"></script>
         </body>
     </html>
