styling to timeline

--- a/developer.html
+++ b/developer.html
@@ -29,10 +29,10 @@
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
                               <h3 class="timeline-title">2021</h3>
-                              <p>11 hours ago via Twitter</p>
+                              <p> test text</p>
                             </div>
                             <div class="timeline-body">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
+                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
                             </div>
                           </div>
                         </li>
@@ -42,7 +42,7 @@
                               <h3 class="timeline-title">2020</h3>
                             </div>
                             <div class="timeline-body">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolorem quibusdam, tenetur commodi provident cumque magni voluptatem libero, quis rerum. Fugiat esse debitis optio, tempore. Animi officiis alias, officia repellendus.</p>
+                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
                               <hr>
                               <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -52,10 +52,10 @@
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
                               <h3 class="timeline-title">2019</h3>
-                              <p>11 hours ago via Twitter</p>
+                              <p>test</p>
                             </div>
                             <div class="timeline-body">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
+                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
                             </div>
                           </div>
                         </li>
@@ -65,7 +65,7 @@
                               <h3 class="timeline-title">2018</h3>
                             </div>
                             <div class="timeline-body">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolorem quibusdam, tenetur commodi provident cumque magni voluptatem libero, quis rerum. Fugiat esse debitis optio, tempore. Animi officiis alias, officia repellendus.</p>
+                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolorem quibusdam, tenetur commodi provident cumque magni voluptatem libero, quis rerum. Fugiat esse debitis optio, tempore. Animi officiis alias, officia repellendus.</p>
                               <hr>
                               <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -75,10 +75,10 @@
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
                               <h3 class="timeline-title">2017</h3>
-                              <p>11 hours ago via Twitter</p>
+                              <p>test</p>
                             </div>
                             <div class="timeline-body">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
+                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
                             </div>
                           </div>
                         </li>
