finished timeline w/o dets

--- a/developer.html
+++ b/developer.html
@@ -9,14 +9,9 @@
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-            <link rel="stylesheet" href="css/Contact-Form-Clean.css">
             <link rel="stylesheet" href="css/Footer-Basic.css">
-            <link rel="stylesheet" href="css/custom.css">
             <link rel="stylesheet" href="css/timeline.css">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-            <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-            <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
         </head>
         <body id="page-top">
             <div class="bar"> </div>
@@ -28,21 +23,22 @@
                         <li>
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
-                              <h3 class="timeline-title">2021</h3>
+                              <h3>2021</h3>
                               <p> test text</p>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
+                              <p class="captions">This portfolio</p>
+                              <p class="captions">Documentation for school</p>
                             </div>
                           </div>
                         </li>
                         <li class="timeline-inverted">
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
-                              <h3 class="timeline-title">2020</h3>
+                              <h3>2020</h3>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
+                              <p class="captions">Former portfolio</p>
                               <hr>
                               <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -51,21 +47,23 @@
                         <li>
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
-                              <h3 class="timeline-title">2019</h3>
+                              <h3>2019</h3>
                               <p>test</p>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
+                              <p class="captions">Etsy</p>
+                              <p class="captions">Google</p>
+                              <p class="captions">1st wearable</p>
                             </div>
                           </div>
                         </li>
                         <li class="timeline-inverted">
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
-                              <h3 class="timeline-title">2018</h3>
+                              <h3>2018</h3>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolorem quibusdam, tenetur commodi provident cumque magni voluptatem libero, quis rerum. Fugiat esse debitis optio, tempore. Animi officiis alias, officia repellendus.</p>
+                              <p class="captions"> CN @ Oscar Health</p>
                               <hr>
                               <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
                             </div>
@@ -74,11 +72,12 @@
                         <li>
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
-                              <h3 class="timeline-title">2017</h3>
+                              <h3>2017</h3>
                               <p>test</p>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero laboriosam dolor perspiciatis omnis exercitationem. Beatae, officia pariatur? Est cum veniam excepturi. Maiores praesentium, porro voluptas suscipit facere rem dicta, debitis.</p>
+                              <p class="captions"> First learned how to program</p>
+                              <p class="captions"> Awarded</p>
                             </div>
                           </div>
                         </li>
