--- a/designer.html
+++ b/designer.html
@@ -9,231 +9,94 @@
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-            <link rel="stylesheet" href="css/Contact-Form-Clean.css">
             <link rel="stylesheet" href="css/Footer-Basic.css">
-            <link rel="stylesheet" href="css/custom.css">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-            <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-            <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-            <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
             <link rel="stylesheet" href="css/timeline.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
         </head>
-        <body>
-			<div class="bar"> </div>
-            <div class="Timeline" id="Timeline">
-	<div class="Timeline-line">
-		<div class="Timeline-line-menu"></div>
-	</div>
-	
-	<div class="Timeline-item">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Item</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					Lorem ipsum dolor sit amet, consectetur adipisicing.
-				</div>
-				<div class="Timeline-item-content-body"></div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="Timeline-item Timeline-item--quote">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Quote</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					<blockquote>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-					</blockquote>
-				</div>
-				<div class="Timeline-item-content-body"></div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="Timeline-item Timeline-item--image">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Image</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					Lorem ipsum dolor sit amet, consectetur adipisicing.
-				</div>
-				<div class="Timeline-item-content-body">
-					<img src="http://fakeimg.pl/350x200/ddd/FFF/?text=Hola">
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="Timeline-item">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Video</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-body">
-					<iframe src="//player.vimeo.com/video/112719694?title=0&byline=0&portrait=0" width="100%" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="Timeline-item">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Item</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					Lorem ipsum dolor sit amet, consectetur adipisicing.
-				</div>
-				<div class="Timeline-item-content-body"></div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="Timeline-item Timeline-item--quote">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Quote</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					<blockquote>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum inventore quas deserunt, reprehenderit est doloribus praesentium minima sequi repudiandae libero!</p>
-					</blockquote>
-				</div>
-				<div class="Timeline-item-content-body"></div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="Timeline-item">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Item</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					Lorem ipsum dolor sit amet, consectetur adipisicing.
-				</div>
-				<div class="Timeline-item-content-body"></div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="Timeline-item">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Item</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					Lorem ipsum dolor sit amet, consectetur adipisicing.
-				</div>
-				<div class="Timeline-item-content-body"></div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="Timeline-item Timeline-item--image">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Image</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					Lorem ipsum dolor sit amet, consectetur adipisicing.
-				</div>
-				<div class="Timeline-item-content-body">
-					<img src="http://fakeimg.pl/350x100/ddd/FFF/?text=Chao">
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-		<div class="Timeline-item Timeline-item--image">
-		<div class="Timeline-item-inner">
-			<div class="Timeline-item-index"></div>
-			<div class="Timeline-item-top">
-				<div class="Timeline-item-top-type">
-					<i></i> <span>Image</span>				
-				</div>
-
-			</div>
-			<div class="Timeline-item-content">
-				<div class="Timeline-item-content-title">
-					Lorem ipsum dolor sit amet, consectetur adipisicing.
-				</div>
-				<div class="Timeline-item-content-body">
-					<img src="http://placekitten.com/350/208">
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-</div>
-<div class="footer"></div>
-<script src="js/jquery.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="js/bs-init.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<script src="js/stylish-portfolio.js"></script>
-<script src="js/custom.js"></script>
+        <body id="page-top">
+            <div class="bar"> </div>
+            <div style="background: #000000; padding-top: 10%;">
+                <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
+                  <div class="panel panel-default">
+                    <div class="panel-body">
+                      <ul class="timeline">
+                        <li>
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2021</h3>
+                              <p> test text</p>
+                            </div>
+                            <div class="timeline-body">
+							  <p class="captions">Designing for final project</p>
+                            </div>
+                          </div>
+                        </li>
+                        <li class="timeline-inverted">
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2020</h3>
+                            </div>
+                            <div class="timeline-body">
+								<p class="captions">3D Design</p>
+								<p class="captions">Biodesign</p>
+								<p class="captions">etc</p>
+								<p class="captions">etc</p>
+								<p class="captions">etc</p>
+								<p class="captions">etc</p>
+								<p class="captions">Biodesign</p>
+                              <hr>
+                              <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                            </div>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2019</h3>
+                              <p>test</p>
+                            </div>
+                            <div class="timeline-body">
+                              <p class="captions">Textile Designer</p>
+                              <p class="captions">1st wearable</p>
+                            </div>
+                          </div>
+                        </li>
+                        <li class="timeline-inverted">
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2018</h3>
+                            </div>
+                            <div class="timeline-body">
+							  <p class="captions"> HSFI</p>
+							  <p class="captions"> Awarded</p>
+                              <hr>
+                              <img style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                            </div>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2017</h3>
+                              <p>test</p>
+                            </div>
+                            <div class="timeline-body">
+                              <p class="captions"> HSFI </p>
+                            </div>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="footer"></div>
+            <script src="js/jquery.min.js"></script>
+            <script src="bootstrap/js/bootstrap.min.js"></script>
+            <script src="js/bs-init.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+            <script src="js/stylish-portfolio.js"></script>
+            <script src="js/custom.js"></script>
         </body>
     </html>
-    
