--- a/artist.html
+++ b/artist.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -48,6 +49,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="js/stylish-portfolio.js"></script>
     <script src="js/custom.js"></script>
+    <script src= 
+    "https://code.jquery.com/jquery-3.2.1.slim.min.js"> 
+      </script> 
+        <script src= 
+    "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"> 
+      </script> 
+        <script src= 
+     "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"> 
+      </script> 
 </body>
 
 </html>
