--- a/navbar.html
+++ b/navbar.html
@@ -1,12 +1,14 @@
 <nav class="navbar navbar-light navbar-expand-lg fixed-top navbar-custom" style="background: transparent;">
-    <div class="container"><a class="navbar-brand" href="index.html" style="color: #d8ff33;">PORTFOLIO</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive" style="color: #000000;"><span class="navbar-toggler-icon" style="color: #000000;"></span></button>
-        <div class="collapse navbar-collapse" id="navbarResponsive" style="color:  #d8ff33;">
-            <ul class="nav navbar-nav ml-auto" style="color: #000000;">
-                <li class="nav-item" style="color: #000000;"><a class="nav-link" href="developer.html" style="color: #d8ff33;">DEVELOPER</a></li>
-                <li class="nav-item" style="color: #000000;"><a class="nav-link" href="designer.html" style="color: #d8ff33;">DESIGNER</a></li>
-                <li class="nav-item" style="color: #000000;"><a class="nav-link" href="artist.html" style="color: #d8ff33;">ARTIST</a></li>
-                <li class="nav-item" style="color: #000000;"><a class="nav-link" href="about.html" style="color: #d8ff33">ABOUT / CONTACT</a></li>
-            </ul>
-        </div>
+    <div class="container">
+        <a class="navbar-brand" href="index.html" style="color: #d8ff33;">PORTFOLIO</a>
+        <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"> <span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive" style="color:  #d8ff33;">
+                <ul class="nav navbar-nav ml-auto" style="color: #d8ff33;">
+                    <li class="nav-item" style="color: #000000;"><a class="nav-link" href="developer.html" style="color: #d8ff33;">DEVELOPER</a></li>
+                    <li class="nav-item" style="color: #000000;"><a class="nav-link" href="designer.html" style="color: #d8ff33;">DESIGNER</a></li>
+                    <li class="nav-item" style="color: #000000;"><a class="nav-link" href="artist.html" style="color: #d8ff33;">ARTIST</a></li>
+                    <li class="nav-item" style="color: #000000;"><a class="nav-link" href="about.html" style="color: #d8ff33">ABOUT / CONTACT</a></li>
+                </ul>
+            </div>
     </div>
 </nav>
