minor text edit

--- a/developer.html
+++ b/developer.html
@@ -24,11 +24,12 @@
                           <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                             <div class="timeline-heading">
                               <h3>2021</h3>
-                              <p> test text</p>
+                              <br>
                             </div>
                             <div class="timeline-body">
-                              <p class="captions">This portfolio</p>
+                              <p class="captions">Final project</p>
                               <p class="captions">Documentation for school</p>
+                              <p class="captions">This portfolio</p>
                             </div>
                           </div>
                         </li>
