--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
                                 <img src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;">
                                 <div class="captions">Fabricademy </div>
+                                <?php echo "My first PHP script!";?>
+
                                 <!-- <div id="testDiv"> swag </div> -->
                             </div>
                             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement"> 
