--- a/artist.html
+++ b/artist.html
@@ -1,52 +1,90 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Isa Biramontes</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="css/Contact-Form-Clean.css">
-    <link rel="stylesheet" href="css/Footer-Basic.css">
-    <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-</head>
-
-<body>
-    <div class="bar"> </div>
-    <div class="container" style="width: 100;min-width: 1200px;padding-right: 5%;padding-left: 5%;">
-        <div class="row">
-            <div class="col" style="width: 25%;"><img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;"></div>
-            <div class="col" style="width: 5%;"></div>
-            <div class="col" style="width: 25%;"><img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg"></div>
-            <div class="col" style="width: 5%;"></div>
-            <div class="col" style="width: 25%;"><img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" src="img/af8d63a477078732b79ff9d9fc6087.jpg"></div>
-        </div>
-    </div>
-    <div style="background: #b4dadd;padding-top: 50px;width: 100%;min-width: 1200px;">
-        <div class="container" style="padding-right: 0px;padding-left: 0px;width: 100%;margin-right: 10%;margin-left: 10%;min-width: 1200px;">
-            <div class="row">
-                <div class="col-md-4 offset-lg-0" style="padding-right: 0px;padding-left: 0px;"><img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;"><img data-aos="zoom-out-up" data-aos-duration="1000" data-aos-once="true" style="padding-top: 10px;padding-bottom: 10px;height: auto;width: auto;" src="img/discovery-bg%20(1).jpg"><img data-aos="zoom-out-up" data-aos-duration="1000" data-aos-once="true" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;"></div>
-                <div class="col-md-4" style="width: auto;height: auto;padding: 0;"><img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" style="height: auto;width: auto;" src="img/discovery-bg%20(1).jpg"><img data-aos="zoom-out-up" data-aos-duration="1000" data-aos-once="true" style="height: auto;width: auto;padding-top: 10px;padding-bottom: 10px;" src="img/discovery-bg%20(1).jpg"><img data-aos="zoom-out-up" data-aos-duration="1000" data-aos-once="true" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;"><img data-aos="zoom-out-up" data-aos-duration="1000" data-aos-once="true" style="height: auto;width: auto;padding-top: 10px;padding-bottom: 10px;" src="img/discovery-bg%20(1).jpg"><img data-aos="zoom-out-up" data-aos-duration="1000" data-aos-once="true" style="height: auto;width: auto;padding-top: 10px;padding-bottom: 10px;" src="img/discovery-bg%20(1).jpg"></div>
-                <div class="col-md-4 offset-lg-0" style="width: auto;height: auto;padding: 0;"><img data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;"><img data-aos="zoom-out-up" data-aos-duration="850" data-aos-once="true" style="padding-top: 10px;padding-bottom: 10px;height: auto;width: auto;" src="img/discovery-bg%20(1).jpg"><img data-aos="zoom-out-up" data-aos-duration="1000" data-aos-once="true" src="img/af8d63a477078732b79ff9d9fc6087.jpg" style="width: auto;height: auto;"></div>
+    <html>
+        <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+            <title>Isa Biramontes</title>
+            <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+            <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css"> 
+            <link rel="preconnect" href="https://fonts.gstatic.com"> 
+            <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
+            <link rel="stylesheet" href="css/Footer-Basic.css">
+            <link rel="stylesheet" href="css/timeline.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+        </head>
+        <body id="page-top">
+            <div class="bar"> </div>
+            <div style="background: #000000; padding-top: 5%;">
+                <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
+                  <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div id="overlay" onclick="off()">
+                            <div class="overlay_content">
+                                <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                            </div>
+                        </div>
+                      <ul class="timeline">
+                        <li>
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2021</h3>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="captions">text</p>
+                              <hr>
+                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                            </div>
+                          </div>
+                        </li>
+                        <li class="timeline-inverted">
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2020</h3>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="captions">text</p>
+                              <hr>
+                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                            </div>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2019</h3>
+                              <p>test</p>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="captions">text</p>
+                              <hr>
+                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                            </div>
+                          </div>
+                        </li>
+                        <li class="timeline-inverted">
+                          <div class="timeline-panel" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                            <div class="timeline-heading">
+                              <h3>2018</h3>
+                            </div>
+                            <div class="timeline-body">
+                                <p class="captions">text</p>
+                              <hr>
+                              <img class="timeline_magnify" style="height: auto; width: auto;" src="img/discovery-bg%20(1).jpg">
+                            </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
             </div>
-        </div>
-    </div>
-    <div class="footer-basic" style="background: rgb(0,0,0);">
-        <footer>
-            <div class="social" style="height: 30px;border-style: none;text-align: right;"><a href="#" style="border-style: none;font-size: 25px;"></a><a href="#" style="border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;text-align: right;"></i></a><a href="#" style="border-style: none;color: rgb(255,255,255);font-size: 25px;"></a></div>
-        </footer>
-    </div>
-    <script src="js/jquery.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="js/stylish-portfolio.js"></script>
-    <script src="js/custom.js"></script>
-</body>
-
-</html>
+            <div class="footer"></div>
+            <script src="js/jquery.min.js"></script>
+            <script src="bootstrap/js/bootstrap.min.js"></script>
+            <script src="js/bs-init.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+            <script src="js/stylish-portfolio.js"></script>
+            <script src="js/custom.js"></script>
+        </body>
+    </html>
